quite brutally remove the bot part